# games-dev-tech-infra-cost-reduction

./: .gitignore  Dockerfile  README.md  README.txt  bedrock.py  check.py  check_tencent.py  cloudshell_check.py  deploy.sh  ii-dev-result.txt  output.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: bedrock-agentcore-confluence.md  bedrock-agentcore-guide.md
lambda_function/: handler.py
mcp_server/: Dockerfile  deploy.sh  pyproject.toml  server.py
terraform/: README.md  agentcore.tf  assume-role.sh  iam.tf  lambda.tf  output.txt  outputs.tf  providers.tf  variables.tf
