[project]
name = "aws-pricing-mcp-server"
version = "0.1.0"
description = "AWS Pricing MCP Server for instance cost optimization"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[project.scripts]
aws-pricing-mcp = "server:main"

