[project]
name = "aws-pricing-mcp-server"
version = "1.0.0"
description = "AWS Pricing MCP Server for instance cost optimization (Official MCP SDK)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "boto3>=1.34.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[project.scripts]
aws-pricing-mcp = "server:main"
